Issue: #50 Define Requestly Settings Model

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -382,11 +382,13 @@
     <script type="text/javascript" src="/src/pages/templates.hbs.js"></script>
 
     <!-- Backbone Models -->
+    <script type="text/javascript" src="/src/pages/js/models/BaseModel.js"></script>
     <script type="text/javascript" src="/src/pages/js/models/BaseRuleModel.js"></script>
     <script type="text/javascript" src="/src/pages/js/models/RedirectRuleModel.js"></script>
     <script type="text/javascript" src="/src/pages/js/models/CancelRuleModel.js"></script>
     <script type="text/javascript" src="/src/pages/js/models/ReplaceRuleModel.js"></script>
     <script type="text/javascript" src="/src/pages/js/models/HeadersRuleModel.js"></script>
+    <script type="text/javascript" src="/src/pages/js/models/SettingsModel.js"></script>
 
     <!-- Backbone Collections -->
     <script type="text/javascript" src="/src/pages/js/collections/RulesCollection.js"></script>
