--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,11 +11,12 @@
     <link href="/src/pages/css/replace_rule.css" rel="stylesheet">
     <link href="/src/pages/css/headers_rule.css" rel="stylesheet">
     <link href="/src/pages/css/rule_cards.css" rel="stylesheet">
+    <link href="/src/pages/css/rq_settings.css" rel="stylesheet">
   </head>
   <body>
     <!-------------------------------- Replace Rule Editor Template ------------------------------------->
     <script type="text/template" id="replace-rule-editor-template">
-      <nav class="rule-header">
+      <nav class="content-header">
         <a href="#selectRule" role="button" class="back-button glyphicon glyphicon-share-alt" aria-hidden="true" title="Go Back"></a>
         <span>Replace Host or some part of URL</span>
       </nav>
@@ -83,7 +84,7 @@
 
     <!-------------------------------- Headers Rule Editor Template ------------------------------------->
     <script type="text/template" id="headers-editor-template">
-      <nav class="rule-header">
+      <nav class="content-header">
         <a href="#selectRule" role="button" class="back-button glyphicon glyphicon-share-alt" aria-hidden="true" title="Go Back"></a>
         <span>Modify Headers in HTTP Request and Response</span>
       </nav>
@@ -217,7 +218,7 @@
     <!----------------------End of Headers Rule Editor Template------------------------------------------------>
 
     <script type="text/template" id="rule-cards-template">
-      <nav class="rule-header rq-dimgrey">
+      <nav class="content-header rq-dimgrey">
         <a href="#" role="button" class="back-button glyphicon glyphicon-share-alt" aria-hidden="true" title="Go Back"></a>
         <span>Select Rule</span>
       </nav>
@@ -322,7 +323,7 @@
     <script type="text/javascript" src="/src/pages/js/models/CancelRuleModel.js"></script>
     <script type="text/javascript" src="/src/pages/js/models/ReplaceRuleModel.js"></script>
     <script type="text/javascript" src="/src/pages/js/models/HeadersRuleModel.js"></script>
-    <script type="text/javascript" src="/src/pages/js/models/SettingsModel.js"></script>
+    <script type="text/javascript" src="/src/pages/js/models/RequestlySettingsModel.js"></script>
 
     <!-- Backbone Collections -->
     <script type="text/javascript" src="/src/pages/js/collections/RulesCollection.js"></script>
@@ -331,6 +332,7 @@
     <script type="text/javascript" src="/src/pages/js/mixins/InputValidation.js"></script>
 
     <!-- Backbone Views -->
+    <script type="text/javascript" src="/src/pages/js/views/BaseView.js"></script>
     <script type="text/javascript" src="/src/pages/js/views/BaseRuleEditorView.js"></script>
     <script type="text/javascript" src="/src/pages/js/views/RedirectRuleEditorView.js"></script>
     <script type="text/javascript" src="/src/pages/js/views/CancelRuleEditorView.js"></script>
@@ -338,6 +340,7 @@
     <script type="text/javascript" src="/src/pages/js/views/HeadersEditorView.js"></script>
     <script type="text/javascript" src="/src/pages/js/views/RuleIndexView.js"></script>
     <script type="text/javascript" src="/src/pages/js/views/RuleCardsView.js"></script>
+    <script type="text/javascript" src="/src/pages/js/views/RequestlySettingsView.js"></script>
 
     <script type="text/javascript" src="/src/pages/js/router.js"></script>
     <script type="text/javascript" src="/src/pages/js/init.js"></script>
