Issue #50: [2] Disable List Page and All actions when requestly is enabled/disabled

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -292,6 +292,12 @@
       </div>
     </div>
 
+    <div id="extension-disable-backdrop" class="backdrop modal-backdrop"></div>
+    <div id="extension-disable-backdrop-message" class="backdrop-message alert alert-info">
+      <p>Requestly is deactivated.</p>
+      <p>You can enable it by using Right+Click and hit Activate Requestly</p>
+    </div>
+
     <!-- Load all scripts here  -->
     <script type="text/javascript" src="/src/libs/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="/src/libs/underscore-1.6.0.js"></script>
