Issue #50: Fixed Broken Extension icon link in header

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -271,7 +271,7 @@
     <!-- End of templates sections -->
 
     <div class="header">
-      <img src="/resources/images/48x48x32.png" class="icon-requestly">
+      <img src="/resources/images/38x38.png" class="icon-requestly">
       <span class="rq-white">Request</span>
       <span class="rq-blue">ly</span>
       <span class="rq-dash"> - </span>
@@ -295,7 +295,7 @@
     <div id="extension-disable-backdrop" class="backdrop modal-backdrop"></div>
     <div id="extension-disable-backdrop-message" class="backdrop-message alert alert-info">
       <p>Requestly is deactivated.</p>
-      <p>You can enable it by using Right+Click and hit Activate Requestly</p>
+      <p>You can activate it by using Right+Click and hit Activate Requestly</p>
     </div>
 
     <!-- Load all scripts here  -->
